# voice-assisant

./: .gitignore  README.md  makefile  pyproject.toml
data/: user_preferences.json
src/: app_helpers.py  llm.py  main.py  text_to_speech.py  voice_to_text.py
src/audio/: audio_visualizer.py  echo_cancel.py
src/logger/: logger.py
src/preferences/: preference.py  services.py
src/tools/: definition.py  defition.py  query_refiner.py  terminal.py  web_scraper.py
src/tools/wrapper/: wrapper.py
src/ui/: console_status.py
src/utils/: cleaner.py
